MINIC/MINIC/MINIC.output
Terminals unused in grammar

   INT
   FLOAT


State 40 conflicts: 1 shift/reduce
State 41 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce
State 47 conflicts: 2 reduce/reduce
State 68 conflicts: 1 shift/reduce
State 86 conflicts: 1 shift/reduce
State 87 conflicts: 1 shift/reduce
State 88 conflicts: 1 shift/reduce
State 89 conflicts: 1 shift/reduce
State 90 conflicts: 1 shift/reduce
State 91 conflicts: 1 shift/reduce
State 92 conflicts: 1 shift/reduce
State 93 conflicts: 1 shift/reduce
State 94 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 96 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce


Grammar

    0 $accept: compile_unit $end

    1 compile_unit: statement
    2             | compile_unit statement
    3             | function_definition
    4             | compile_unit function_definition

    5 function_definition: FUNCTION IDENTIFIER '(' fargs ')' compound_statement
    6                    | FUNCTION IDENTIFIER '(' ')' compound_statement

    7 fargs: IDENTIFIER
    8      | fargs ',' IDENTIFIER

    9 statement: expression ';'
   10          | compound_statement
   11          | selection_statement
   12          | while_statement
   13          | do_while_statement
   14          | for_statement
   15          | RETURN expression ';'
   16          | BREAK ';'
   17          | ';'

   18 selection_statement: if_statement
   19                    | switch_statement

   20 if_statement: IF '(' expression ')' statement
   21             | IF '(' expression ')' statement ELSE statement

   22 switch_statement: SWITCH '(' expression ')' '{' case_options '}'
   23                 | SWITCH '(' expression ')' '{' case_options default_option '}'

   24 case_options: CASE expression ':' statement_list
   25             | CASE expression ':'
   26             | case_options CASE expression ':' statement_list
   27             | case_options CASE expression ':'

   28 default_option: DEFAULT ':' statement_list

   29 while_statement: WHILE '(' expression ')' statement

   30 do_while_statement: DO statement WHILE '(' expression ')' ';'

   31 for_statement: FOR '(' ';' ';' ')' statement
   32              | FOR '(' ';' expression ';' expression ')' statement
   33              | FOR '(' expression ';' expression ';' expression ')' statement

   34 compound_statement: '{' '}'
   35                   | '{' statement_list '}'

   36 statement_list: statement
   37               | statement_list statement

   38 array: '{' elems '}'

   39 elems: elem
   40      | elems ',' elem

   41 elem: expression
   42     | array

   43 expression: NUMBER
   44           | IDENTIFIER
   45           | array
   46           | IDENTIFIER '(' ')'
   47           | IDENTIFIER '(' args ')'
   48           | expression '[' expression ']'
   49           | expression PLUS expression
   50           | expression MINUS expression
   51           | expression MULT expression
   52           | expression DIV expression
   53           | PLUS expression
   54           | MINUS expression
   55           | expression PLUS
   56           | expression MINUS
   57           | '(' expression ')'
   58           | IDENTIFIER '=' expression
   59           | expression AND expression
   60           | expression OR expression
   61           | NOT expression
   62           | expression GT expression
   63           | expression GTE expression
   64           | expression LT expression
   65           | expression LTE expression
   66           | expression EQUAL expression
   67           | expression NEQUAL expression

   68 args: expression
   69     | args ',' expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 5 6 20 21 22 23 29 30 31 32 33 46 47 57
')' (41) 5 6 20 21 22 23 29 30 31 32 33 46 47 57
',' (44) 8 40 69
':' (58) 24 25 26 27 28
';' (59) 9 15 16 17 30 31 32 33
'=' (61) 58
'[' (91) 48
']' (93) 48
'{' (123) 22 23 34 35 38
'}' (125) 22 23 34 35 38
error (256)
IDENTIFIER (258) 5 6 7 8 44 46 47 58
NUMBER (259) 43
RETURN (260) 15
BREAK (261) 16
IF (262) 20 21
ELSE (263) 21
SWITCH (264) 22 23
FUNCTION (265) 5 6
WHILE (266) 29 30
DO (267) 30
FOR (268) 31 32 33
INT (269)
FLOAT (270)
CASE (271) 24 25 26 27
DEFAULT (272) 28
IFPREC (273)
OR (274) 60
AND (275) 59
NEQUAL (276) 67
EQUAL (277) 66
LT (278) 64
LTE (279) 65
GT (280) 62
GTE (281) 63
MINUS (282) 50 54 56
PLUS (283) 49 53 55
DIV (284) 52
MULT (285) 51
NOT (286) 61


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
compile_unit (43)
    on left: 1 2 3 4, on right: 0 2 4
function_definition (44)
    on left: 5 6, on right: 3 4
fargs (45)
    on left: 7 8, on right: 5 8
statement (46)
    on left: 9 10 11 12 13 14 15 16 17, on right: 1 2 20 21 29 30 31
    32 33 36 37
selection_statement (47)
    on left: 18 19, on right: 11
if_statement (48)
    on left: 20 21, on right: 18
switch_statement (49)
    on left: 22 23, on right: 19
case_options (50)
    on left: 24 25 26 27, on right: 22 23 26 27
default_option (51)
    on left: 28, on right: 23
while_statement (52)
    on left: 29, on right: 12
do_while_statement (53)
    on left: 30, on right: 13
for_statement (54)
    on left: 31 32 33, on right: 14
compound_statement (55)
    on left: 34 35, on right: 5 6 10
statement_list (56)
    on left: 36 37, on right: 24 26 28 35 37
array (57)
    on left: 38, on right: 42 45
elems (58)
    on left: 39 40, on right: 38 40
elem (59)
    on left: 41 42, on right: 39 40
expression (60)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65 66 67, on right: 9 15 20 21 22 23 24 25 26 27 29
    30 32 33 41 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66 67 68 69
args (61)
    on left: 68 69, on right: 47 69


State 0

    0 $accept: . compile_unit $end

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    RETURN      shift, and go to state 3
    BREAK       shift, and go to state 4
    IF          shift, and go to state 5
    SWITCH      shift, and go to state 6
    FUNCTION    shift, and go to state 7
    WHILE       shift, and go to state 8
    DO          shift, and go to state 9
    FOR         shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    ';'         shift, and go to state 15
    '{'         shift, and go to state 16

    compile_unit         go to state 17
    function_definition  go to state 18
    statement            go to state 19
    selection_statement  go to state 20
    if_statement         go to state 21
    switch_statement     go to state 22
    while_statement      go to state 23
    do_while_statement   go to state 24
    for_statement        go to state 25
    compound_statement   go to state 26
    array                go to state 27
    expression           go to state 28


State 1

   44 expression: IDENTIFIER .
   46           | IDENTIFIER . '(' ')'
   47           | IDENTIFIER . '(' args ')'
   58           | IDENTIFIER . '=' expression

    '='  shift, and go to state 29
    '('  shift, and go to state 30

    $default  reduce using rule 44 (expression)


State 2

   43 expression: NUMBER .

    $default  reduce using rule 43 (expression)


State 3

   15 statement: RETURN . expression ';'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    '{'         shift, and go to state 31

    array       go to state 27
    expression  go to state 32


State 4

   16 statement: BREAK . ';'

    ';'  shift, and go to state 33


State 5

   20 if_statement: IF . '(' expression ')' statement
   21             | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 34


State 6

   22 switch_statement: SWITCH . '(' expression ')' '{' case_options '}'
   23                 | SWITCH . '(' expression ')' '{' case_options default_option '}'

    '('  shift, and go to state 35


State 7

    5 function_definition: FUNCTION . IDENTIFIER '(' fargs ')' compound_statement
    6                    | FUNCTION . IDENTIFIER '(' ')' compound_statement

    IDENTIFIER  shift, and go to state 36


State 8

   29 while_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 37


State 9

   30 do_while_statement: DO . statement WHILE '(' expression ')' ';'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    RETURN      shift, and go to state 3
    BREAK       shift, and go to state 4
    IF          shift, and go to state 5
    SWITCH      shift, and go to state 6
    WHILE       shift, and go to state 8
    DO          shift, and go to state 9
    FOR         shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    ';'         shift, and go to state 15
    '{'         shift, and go to state 16

    statement            go to state 38
    selection_statement  go to state 20
    if_statement         go to state 21
    switch_statement     go to state 22
    while_statement      go to state 23
    do_while_statement   go to state 24
    for_statement        go to state 25
    compound_statement   go to state 26
    array                go to state 27
    expression           go to state 28


State 10

   31 for_statement: FOR . '(' ';' ';' ')' statement
   32              | FOR . '(' ';' expression ';' expression ')' statement
   33              | FOR . '(' expression ';' expression ';' expression ')' statement

    '('  shift, and go to state 39


State 11

   54 expression: MINUS . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    '{'         shift, and go to state 31

    array       go to state 27
    expression  go to state 40


State 12

   53 expression: PLUS . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    '{'         shift, and go to state 31

    array       go to state 27
    expression  go to state 41


State 13

   61 expression: NOT . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    '{'         shift, and go to state 31

    array       go to state 27
    expression  go to state 42


State 14

   57 expression: '(' . expression ')'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    '{'         shift, and go to state 31

    array       go to state 27
    expression  go to state 43


State 15

   17 statement: ';' .

    $default  reduce using rule 17 (statement)


State 16

   34 compound_statement: '{' . '}'
   35                   | '{' . statement_list '}'
   38 array: '{' . elems '}'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    RETURN      shift, and go to state 3
    BREAK       shift, and go to state 4
    IF          shift, and go to state 5
    SWITCH      shift, and go to state 6
    WHILE       shift, and go to state 8
    DO          shift, and go to state 9
    FOR         shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    ';'         shift, and go to state 15
    '{'         shift, and go to state 16
    '}'         shift, and go to state 44

    statement            go to state 45
    selection_statement  go to state 20
    if_statement         go to state 21
    switch_statement     go to state 22
    while_statement      go to state 23
    do_while_statement   go to state 24
    for_statement        go to state 25
    compound_statement   go to state 26
    statement_list       go to state 46
    array                go to state 47
    elems                go to state 48
    elem                 go to state 49
    expression           go to state 50


State 17

    0 $accept: compile_unit . $end
    2 compile_unit: compile_unit . statement
    4             | compile_unit . function_definition

    $end        shift, and go to state 51
    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    RETURN      shift, and go to state 3
    BREAK       shift, and go to state 4
    IF          shift, and go to state 5
    SWITCH      shift, and go to state 6
    FUNCTION    shift, and go to state 7
    WHILE       shift, and go to state 8
    DO          shift, and go to state 9
    FOR         shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    ';'         shift, and go to state 15
    '{'         shift, and go to state 16

    function_definition  go to state 52
    statement            go to state 53
    selection_statement  go to state 20
    if_statement         go to state 21
    switch_statement     go to state 22
    while_statement      go to state 23
    do_while_statement   go to state 24
    for_statement        go to state 25
    compound_statement   go to state 26
    array                go to state 27
    expression           go to state 28


State 18

    3 compile_unit: function_definition .

    $default  reduce using rule 3 (compile_unit)


State 19

    1 compile_unit: statement .

    $default  reduce using rule 1 (compile_unit)


State 20

   11 statement: selection_statement .

    $default  reduce using rule 11 (statement)


State 21

   18 selection_statement: if_statement .

    $default  reduce using rule 18 (selection_statement)


State 22

   19 selection_statement: switch_statement .

    $default  reduce using rule 19 (selection_statement)


State 23

   12 statement: while_statement .

    $default  reduce using rule 12 (statement)


State 24

   13 statement: do_while_statement .

    $default  reduce using rule 13 (statement)


State 25

   14 statement: for_statement .

    $default  reduce using rule 14 (statement)


State 26

   10 statement: compound_statement .

    $default  reduce using rule 10 (statement)


State 27

   45 expression: array .

    $default  reduce using rule 45 (expression)


State 28

    9 statement: expression . ';'
   48 expression: expression . '[' expression ']'
   49           | expression . PLUS expression
   50           | expression . MINUS expression
   51           | expression . MULT expression
   52           | expression . DIV expression
   55           | expression . PLUS
   56           | expression . MINUS
   59           | expression . AND expression
   60           | expression . OR expression
   62           | expression . GT expression
   63           | expression . GTE expression
   64           | expression . LT expression
   65           | expression . LTE expression
   66           | expression . EQUAL expression
   67           | expression . NEQUAL expression

    OR      shift, and go to state 54
    AND     shift, and go to state 55
    NEQUAL  shift, and go to state 56
    EQUAL   shift, and go to state 57
    LT      shift, and go to state 58
    LTE     shift, and go to state 59
    GT      shift, and go to state 60
    GTE     shift, and go to state 61
    MINUS   shift, and go to state 62
    PLUS    shift, and go to state 63
    DIV     shift, and go to state 64
    MULT    shift, and go to state 65
    ';'     shift, and go to state 66
    '['     shift, and go to state 67


State 29

   58 expression: IDENTIFIER '=' . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    '{'         shift, and go to state 31

    array       go to state 27
    expression  go to state 68


State 30

   46 expression: IDENTIFIER '(' . ')'
   47           | IDENTIFIER '(' . args ')'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    ')'         shift, and go to state 69
    '{'         shift, and go to state 31

    array       go to state 27
    expression  go to state 70
    args        go to state 71


State 31

   38 array: '{' . elems '}'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    '{'         shift, and go to state 31

    array       go to state 47
    elems       go to state 48
    elem        go to state 49
    expression  go to state 72


State 32

   15 statement: RETURN expression . ';'
   48 expression: expression . '[' expression ']'
   49           | expression . PLUS expression
   50           | expression . MINUS expression
   51           | expression . MULT expression
   52           | expression . DIV expression
   55           | expression . PLUS
   56           | expression . MINUS
   59           | expression . AND expression
   60           | expression . OR expression
   62           | expression . GT expression
   63           | expression . GTE expression
   64           | expression . LT expression
   65           | expression . LTE expression
   66           | expression . EQUAL expression
   67           | expression . NEQUAL expression

    OR      shift, and go to state 54
    AND     shift, and go to state 55
    NEQUAL  shift, and go to state 56
    EQUAL   shift, and go to state 57
    LT      shift, and go to state 58
    LTE     shift, and go to state 59
    GT      shift, and go to state 60
    GTE     shift, and go to state 61
    MINUS   shift, and go to state 62
    PLUS    shift, and go to state 63
    DIV     shift, and go to state 64
    MULT    shift, and go to state 65
    ';'     shift, and go to state 73
    '['     shift, and go to state 67


State 33

   16 statement: BREAK ';' .

    $default  reduce using rule 16 (statement)


State 34

   20 if_statement: IF '(' . expression ')' statement
   21             | IF '(' . expression ')' statement ELSE statement

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    '{'         shift, and go to state 31

    array       go to state 27
    expression  go to state 74


State 35

   22 switch_statement: SWITCH '(' . expression ')' '{' case_options '}'
   23                 | SWITCH '(' . expression ')' '{' case_options default_option '}'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    '{'         shift, and go to state 31

    array       go to state 27
    expression  go to state 75


State 36

    5 function_definition: FUNCTION IDENTIFIER . '(' fargs ')' compound_statement
    6                    | FUNCTION IDENTIFIER . '(' ')' compound_statement

    '('  shift, and go to state 76


State 37

   29 while_statement: WHILE '(' . expression ')' statement

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    '{'         shift, and go to state 31

    array       go to state 27
    expression  go to state 77


State 38

   30 do_while_statement: DO statement . WHILE '(' expression ')' ';'

    WHILE  shift, and go to state 78


State 39

   31 for_statement: FOR '(' . ';' ';' ')' statement
   32              | FOR '(' . ';' expression ';' expression ')' statement
   33              | FOR '(' . expression ';' expression ';' expression ')' statement

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    ';'         shift, and go to state 79
    '{'         shift, and go to state 31

    array       go to state 27
    expression  go to state 80


State 40

   48 expression: expression . '[' expression ']'
   49           | expression . PLUS expression
   50           | expression . MINUS expression
   51           | expression . MULT expression
   52           | expression . DIV expression
   54           | MINUS expression .
   55           | expression . PLUS
   56           | expression . MINUS
   59           | expression . AND expression
   60           | expression . OR expression
   62           | expression . GT expression
   63           | expression . GTE expression
   64           | expression . LT expression
   65           | expression . LTE expression
   66           | expression . EQUAL expression
   67           | expression . NEQUAL expression

    DIV   shift, and go to state 64
    MULT  shift, and go to state 65
    '['   shift, and go to state 67

    '['       [reduce using rule 54 (expression)]
    $default  reduce using rule 54 (expression)


State 41

   48 expression: expression . '[' expression ']'
   49           | expression . PLUS expression
   50           | expression . MINUS expression
   51           | expression . MULT expression
   52           | expression . DIV expression
   53           | PLUS expression .
   55           | expression . PLUS
   56           | expression . MINUS
   59           | expression . AND expression
   60           | expression . OR expression
   62           | expression . GT expression
   63           | expression . GTE expression
   64           | expression . LT expression
   65           | expression . LTE expression
   66           | expression . EQUAL expression
   67           | expression . NEQUAL expression

    DIV   shift, and go to state 64
    MULT  shift, and go to state 65
    '['   shift, and go to state 67

    '['       [reduce using rule 53 (expression)]
    $default  reduce using rule 53 (expression)


State 42

   48 expression: expression . '[' expression ']'
   49           | expression . PLUS expression
   50           | expression . MINUS expression
   51           | expression . MULT expression
   52           | expression . DIV expression
   55           | expression . PLUS
   56           | expression . MINUS
   59           | expression . AND expression
   60           | expression . OR expression
   61           | NOT expression .
   62           | expression . GT expression
   63           | expression . GTE expression
   64           | expression . LT expression
   65           | expression . LTE expression
   66           | expression . EQUAL expression
   67           | expression . NEQUAL expression

    '['  shift, and go to state 67

    '['       [reduce using rule 61 (expression)]
    $default  reduce using rule 61 (expression)


State 43

   48 expression: expression . '[' expression ']'
   49           | expression . PLUS expression
   50           | expression . MINUS expression
   51           | expression . MULT expression
   52           | expression . DIV expression
   55           | expression . PLUS
   56           | expression . MINUS
   57           | '(' expression . ')'
   59           | expression . AND expression
   60           | expression . OR expression
   62           | expression . GT expression
   63           | expression . GTE expression
   64           | expression . LT expression
   65           | expression . LTE expression
   66           | expression . EQUAL expression
   67           | expression . NEQUAL expression

    OR      shift, and go to state 54
    AND     shift, and go to state 55
    NEQUAL  shift, and go to state 56
    EQUAL   shift, and go to state 57
    LT      shift, and go to state 58
    LTE     shift, and go to state 59
    GT      shift, and go to state 60
    GTE     shift, and go to state 61
    MINUS   shift, and go to state 62
    PLUS    shift, and go to state 63
    DIV     shift, and go to state 64
    MULT    shift, and go to state 65
    ')'     shift, and go to state 81
    '['     shift, and go to state 67


State 44

   34 compound_statement: '{' '}' .

    $default  reduce using rule 34 (compound_statement)


State 45

   36 statement_list: statement .

    $default  reduce using rule 36 (statement_list)


State 46

   35 compound_statement: '{' statement_list . '}'
   37 statement_list: statement_list . statement

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    RETURN      shift, and go to state 3
    BREAK       shift, and go to state 4
    IF          shift, and go to state 5
    SWITCH      shift, and go to state 6
    WHILE       shift, and go to state 8
    DO          shift, and go to state 9
    FOR         shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    ';'         shift, and go to state 15
    '{'         shift, and go to state 16
    '}'         shift, and go to state 82

    statement            go to state 83
    selection_statement  go to state 20
    if_statement         go to state 21
    switch_statement     go to state 22
    while_statement      go to state 23
    do_while_statement   go to state 24
    for_statement        go to state 25
    compound_statement   go to state 26
    array                go to state 27
    expression           go to state 28


State 47

   42 elem: array .
   45 expression: array .

    ','       reduce using rule 42 (elem)
    ','       [reduce using rule 45 (expression)]
    '}'       reduce using rule 42 (elem)
    '}'       [reduce using rule 45 (expression)]
    $default  reduce using rule 45 (expression)


State 48

   38 array: '{' elems . '}'
   40 elems: elems . ',' elem

    ','  shift, and go to state 84
    '}'  shift, and go to state 85


State 49

   39 elems: elem .

    $default  reduce using rule 39 (elems)


State 50

    9 statement: expression . ';'
   41 elem: expression .
   48 expression: expression . '[' expression ']'
   49           | expression . PLUS expression
   50           | expression . MINUS expression
   51           | expression . MULT expression
   52           | expression . DIV expression
   55           | expression . PLUS
   56           | expression . MINUS
   59           | expression . AND expression
   60           | expression . OR expression
   62           | expression . GT expression
   63           | expression . GTE expression
   64           | expression . LT expression
   65           | expression . LTE expression
   66           | expression . EQUAL expression
   67           | expression . NEQUAL expression

    OR      shift, and go to state 54
    AND     shift, and go to state 55
    NEQUAL  shift, and go to state 56
    EQUAL   shift, and go to state 57
    LT      shift, and go to state 58
    LTE     shift, and go to state 59
    GT      shift, and go to state 60
    GTE     shift, and go to state 61
    MINUS   shift, and go to state 62
    PLUS    shift, and go to state 63
    DIV     shift, and go to state 64
    MULT    shift, and go to state 65
    ';'     shift, and go to state 66
    '['     shift, and go to state 67

    $default  reduce using rule 41 (elem)


State 51

    0 $accept: compile_unit $end .

    $default  accept


State 52

    4 compile_unit: compile_unit function_definition .

    $default  reduce using rule 4 (compile_unit)


State 53

    2 compile_unit: compile_unit statement .

    $default  reduce using rule 2 (compile_unit)


State 54

   60 expression: expression OR . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    '{'         shift, and go to state 31

    array       go to state 27
    expression  go to state 86


State 55

   59 expression: expression AND . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    '{'         shift, and go to state 31

    array       go to state 27
    expression  go to state 87


State 56

   67 expression: expression NEQUAL . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    '{'         shift, and go to state 31

    array       go to state 27
    expression  go to state 88


State 57

   66 expression: expression EQUAL . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    '{'         shift, and go to state 31

    array       go to state 27
    expression  go to state 89


State 58

   64 expression: expression LT . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 14
    '{'         shift, and go to state 31

    array       go to state 27
    expression  go to state 90


State 59

   65 expression: expression LTE . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
